packages/parser/tests/snapshots/fixtures__fixtures@footnotes-2.mg.snap
---
source: packages/parser/tests/fixtures.rs
expression: "parse_unfolded(&std::fs::read_to_string(path).unwrap())"
input_file: packages/parser/tests/fixtures/footnotes-2.mg
---
body:
  - kind: Paragraph
    children:
      - kind:
          Text: A good marinara starts with San Marzano tomato
      - kind:
          Delimiter: Footnote
        children:
          - kind:
              Text: A tomato is a fruit not a vegetable
      - kind:
          Text: " and a generous amount of olive oil."
    span:
      start: 0
      end: 123
      start_line: 0
      end_line: 2
