packages/parser/tests/snapshots/fixtures__fixtures@links-1.mg.snap
---
source: packages/parser/tests/fixtures.rs
expression: "parse_unfolded(&std::fs::read_to_string(path).unwrap())"
input_file: packages/parser/tests/fixtures/links-1.mg
---
body:
  - kind:
      Marker:
        depth: 1
        kind: UnorderedList
    children:
      - kind:
          Link: "https://kdl.dev"
    span:
      start: 0
      end: 21
      start_line: 0
      end_line: 0
  - kind:
      Marker:
        depth: 1
        kind: UnorderedList
    children:
      - kind:
          Link: "https://kdl.dev"
        children:
          - kind:
              Delimiter: LinkName
            children:
              - kind:
                  Text: KDL
    span:
      start: 22
      end: 50
      start_line: 1
      end_line: 1
  - kind:
      Marker:
        depth: 1
        kind: UnorderedList
    children:
      - kind:
          Link: "https://kdl.dev"
        children:
          - kind:
              Delimiter: LinkName
            children:
              - kind:
                  Text: KDL
          - kind:
              Delimiter: Footnote
            children:
              - kind:
                  Text: A node-based document language
    span:
      start: 51
      end: 115
      start_line: 2
      end_line: 2
