packages/parser/tests/snapshots/fixtures__fixtures@links-2.mg.snap
---
source: packages/parser/tests/fixtures.rs
expression: "parse_unfolded(&std::fs::read_to_string(path).unwrap())"
input_file: packages/parser/tests/fixtures/links-2.mg
---
body:
  - kind: Paragraph
    children:
      - kind:
          Link: recipe
      - kind:
          Text: "               Document reference "
      - kind:
          Link: Ingredients
        attributes:
          entries:
            - value: "#"
      - kind:
          Text: "        Heading in current document "
      - kind:
          Link: "https://kdl.dev"
      - kind:
          Text: "      External via protocol attribute"
    span:
      start: 0
      end: 153
      start_line: 0
      end_line: 2
