packages/parser/tests/snapshots/fixtures__fixtures@links-3.mg.snap
---
source: packages/parser/tests/fixtures.rs
expression: "parse_unfolded(&std::fs::read_to_string(path).unwrap())"
input_file: packages/parser/tests/fixtures/links-3.mg
---
body:
  - kind: Paragraph
    children:
      - kind:
          Link: recipe
        attributes:
          entries:
            - value: "!"
      - kind:
          Text: "       Document Transclusion "
      - kind:
          Link: image.png
        attributes:
          entries:
            - value: "!"
      - kind:
          Text: "    Image Transclusion"
    span:
      start: 0
      end: 78
      start_line: 0
      end_line: 1
