packages/parser/tests/snapshots/fixtures__fixtures@metadata.mg.snap
---
source: packages/parser/tests/fixtures.rs
expression: "parse(&std::fs::read_to_string(path).unwrap())"
input_file: packages/parser/tests/fixtures/metadata.mg
---
meta: ~
body:
  - kind:
      Marker:
        depth: 2
        kind: UnorderedList
    children:
      - kind: Paragraph
        children:
          - kind:
              Text: "title \"My Document\" authors \"John\" \"Jane\" date \"2026-04-15\" version 1"
