packages/parser/tests/snapshots/fixtures__fixtures@tables-1.mg.snap
---
source: packages/parser/tests/fixtures.rs
expression: "parse_unfolded(&std::fs::read_to_string(path).unwrap())"
input_file: packages/parser/tests/fixtures/tables-1.mg
---
body:
  - kind: Table
    children:
      - kind:
          Delimiter: TableHeader
        children:
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Name
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Type
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Color
        span:
          start: 0
          end: 41
          start_line: 0
          end_line: 0
      - kind:
          Delimiter: TableRow
        children:
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Apple
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Fruit
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Red
        span:
          start: 42
          end: 83
          start_line: 1
          end_line: 1
      - kind:
          Delimiter: TableRow
        children:
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Delimiter: Strong
                children:
                  - kind:
                      Text: Carrot
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Vegetable
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Orange
        span:
          start: 84
          end: 125
          start_line: 2
          end_line: 2
      - kind:
          Delimiter: TableRow
        children:
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Blueberry
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Fruit
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Blue
        span:
          start: 126
          end: 167
          start_line: 3
          end_line: 3
    span:
      start: 0
      end: 167
      start_line: 0
      end_line: 3
