packages/parser/tests/snapshots/fixtures__fixtures@tables-2.mg.snap
---
source: packages/parser/tests/fixtures.rs
expression: "parse_unfolded(&std::fs::read_to_string(path).unwrap())"
input_file: packages/parser/tests/fixtures/tables-2.mg
---
body:
  - kind: Table
    children:
      - kind:
          Delimiter: TableHeader
        children:
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Name
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Type
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Color
        span:
          start: 0
          end: 59
          start_line: 0
          end_line: 0
      - kind:
          Delimiter: TableRow
        children:
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Banana
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Fruit
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Yellow
    span:
      start: 0
      end: 59
      start_line: 0
      end_line: 0
