packages/parser/tests/snapshots/fixtures__fixtures@tables-4.mg.snap
---
source: packages/parser/tests/fixtures.rs
expression: "parse_unfolded(&std::fs::read_to_string(path).unwrap())"
input_file: packages/parser/tests/fixtures/tables-4.mg
---
body:
  - kind: Table
    children:
      - kind:
          Delimiter: TableRow
        children:
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Apple
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Fruit
          - kind:
              Delimiter: TableCell
          - kind:
              Delimiter: TableCell
        span:
          start: 0
          end: 29
          start_line: 0
          end_line: 0
      - kind:
          Delimiter: TableRow
        children:
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Carrot
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Vegetable
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Orange
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Crunchy
        span:
          start: 30
          end: 82
          start_line: 1
          end_line: 1
      - kind:
          Delimiter: TableRow
        children:
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Blueberry
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Fruit
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Blue
          - kind:
              Delimiter: TableCell
        span:
          start: 83
          end: 124
          start_line: 2
          end_line: 2
    span:
      start: 0
      end: 124
      start_line: 0
      end_line: 2
