packages/parser/tests/snapshots/fixtures__fixtures@tables-5.mg.snap
---
source: packages/parser/tests/fixtures.rs
expression: "parse_unfolded(&std::fs::read_to_string(path).unwrap())"
input_file: packages/parser/tests/fixtures/tables-5.mg
---
body:
  - kind: Table
    children:
      - kind:
          Delimiter: TableHeader
        children:
          - kind:
              Delimiter: TableCell
          - kind:
              Delimiter: TableCell
          - kind:
              Delimiter: TableCell
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Texture
        span:
          start: 0
          end: 52
          start_line: 0
          end_line: 0
      - kind:
          Delimiter: TableHeader
        children:
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Name
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Type
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Color
          - kind:
              Delimiter: TableCell
        span:
          start: 53
          end: 94
          start_line: 1
          end_line: 1
      - kind:
          Delimiter: TableRow
        children:
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Apple
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Fruit
          - kind:
              Delimiter: TableCell
          - kind:
              Delimiter: TableCell
        span:
          start: 95
          end: 124
          start_line: 2
          end_line: 2
      - kind:
          Delimiter: TableRow
        children:
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Blueberry
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Fruit
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Blue
          - kind:
              Delimiter: TableCell
        span:
          start: 125
          end: 166
          start_line: 3
          end_line: 3
      - kind:
          Delimiter: TableHeader
        children:
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Vegetables
          - kind:
              Delimiter: TableCell
          - kind:
              Delimiter: TableCell
          - kind:
              Delimiter: TableCell
        span:
          start: 167
          end: 183
          start_line: 4
          end_line: 4
      - kind:
          Delimiter: TableRow
        children:
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Carrot
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Vegetable
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Orange
          - kind:
              Delimiter: TableCell
            children:
              - kind:
                  Text: Crunchy
        span:
          start: 184
          end: 236
          start_line: 5
          end_line: 5
    span:
      start: 0
      end: 236
      start_line: 0
      end_line: 5
